more JUnit tests
- ValidateStateObs*.java
- CompareItemsTest
- Bug fix concerning the serializability of StateObserverSim
- some older test routines from src/tools now moved to deprecated/tools.